...
        android:name="com.example.aicollect.presentation.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.aicollect.presentation.collection.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/newPostFragment"
        android:name="com.example.aicollect.presentation.newpost.NewPostFragment"
        android:label="NewPost"
        tools:layout="@layout/fragment_new_post"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
...
